tests/specs/ecosystem/lowlighter/xml/4_0_0.test
lowlighter/xml/4.0.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2694 [ERROR]: Namespace 'Deno' has no exported member 'SeekerSync'.
} & Deno.SeekerSync;
         ~~~~~~~~~~
    at file://<tmpdir>/utils/types.ts:10:10

error: Type checking failed.

